[gd_scene load_steps=3 format=3 uid="uid://dtcredtlstf1m"]

[ext_resource type="Script" path="res://scenes/Main_UI.gd" id="1_31uvy"]
[ext_resource type="PackedScene" uid="uid://dg8nwrmfkwufg" path="res://scenes/loan_ui.tscn" id="2_gsa3i"]

[node name="MainUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_31uvy")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LoanUI" parent="CanvasLayer" instance=ExtResource("2_gsa3i")]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -285.5
offset_top = -216.0
offset_right = 285.5
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="UIContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -152.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="UIContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="UIContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UIContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UIContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UIContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Player Name:"

[node name="player_name" type="Label" parent="UIContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="UIContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UIContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Company Name:"

[node name="company_name" type="Label" parent="UIContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="UIContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UIContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Convention Name:"

[node name="convention_name" type="Label" parent="UIContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="UIContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UIContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Money:"

[node name="money_money" type="Label" parent="UIContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="UIContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UIContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Current Date:"

[node name="current_date" type="Label" parent="UIContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2

[node name="central_buttons" type="GridContainer" parent="UIContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
columns = 3

[node name="Contacts" type="Button" parent="UIContainer/HBoxContainer/central_buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
text = "Contacts"

[node name="Button2" type="Button" parent="UIContainer/HBoxContainer/central_buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
text = "B1"

[node name="Button3" type="Button" parent="UIContainer/HBoxContainer/central_buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
text = "B1"

[node name="Loans" type="Button" parent="UIContainer/HBoxContainer/central_buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
text = "Loans"

[node name="Button5" type="Button" parent="UIContainer/HBoxContainer/central_buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
text = "B1"

[node name="Button6" type="Button" parent="UIContainer/HBoxContainer/central_buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
text = "B1"

[node name="Button7" type="Button" parent="UIContainer/HBoxContainer/central_buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
text = "B1"

[node name="Button8" type="Button" parent="UIContainer/HBoxContainer/central_buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
text = "B1"

[node name="Button9" type="Button" parent="UIContainer/HBoxContainer/central_buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
text = "B1"

[connection signal="pressed" from="UIContainer/HBoxContainer/central_buttons/Loans" to="." method="_on_loans_pressed"]
